[package]
name = "dbt-auth"
description = "Auth methods for database drivers used by dbt"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-common = { workspace = true }
dbt-serde_yaml = { workspace = true }
dbt-xdbc = { workspace = true }

adbc-core = { workspace = true }
arrow-schema = { workspace = true }
base64 = { workspace = true }
minijinja = { workspace = true }
parquet = { workspace = true }
percent-encoding = "2.3.1"
pkcs8 = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }


[lib]
name = "dbt_auth"
path = "src/lib.rs"
doctest = false

[features]
odbc = ["dbt-xdbc/odbc"]
