[package]
name = "dbt-deps"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-common = { workspace = true }
dbt-jinja-utils = { workspace = true }
dbt-schemas = { workspace = true }
dbt-serde_yaml = { workspace = true }
flate2 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ['json'] }
reqwest-middleware = { workspace = true, features = ['json'] }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { version = "0.10.6" }
tar = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
vortex-events = { workspace = true }

[lib]
name = "fs_deps"
path = "src/mod.rs"
doctest = false
