[package]
name = "dbt-fusion-adapter"
description = "dbt fusion adapters"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-agate = { workspace = true }
dbt-common = { workspace = true }
dbt-frontend-common = { workspace = true }
dbt-frontend-schemas = { workspace = true }
dbt-schemas = { workspace = true }
dbt-xdbc = { workspace = true }

arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-json = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }

adbc-core = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
dbt-adapter-proc-macros = { workspace = true }
dbt-serde_yaml = { workspace = true }
futures = { workspace = true }
log = { workspace = true, features = ["serde"] }
minijinja = { workspace = true, features = ["loader", "deserialization"] }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
strum = { workspace = true }
thread_local = "1.1.8"
tokio = { workspace = true }
tracing = { workspace = true }
tracy-client = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
dbt-jinja-utils = { workspace = true }
dbt-parser = { workspace = true }
tempfile = { workspace = true }
test-with = { version = "0.14.7", default-features = false }

[lib]
name = "dbt_fusion_adapter"
path = "src/lib.rs"
doctest = false

[features]
odbc = ["dbt-xdbc/odbc"]
