[package]
name = "dbt-fusion-adapter"
description = "dbt fusion adapters"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-agate = { workspace = true }
dbt-auth = { workspace = true }
dbt-common = { workspace = true }
dbt-frontend-common = { workspace = true }
dbt-schemas = { workspace = true }
dbt-xdbc = { workspace = true }

arrow = { workspace = true }
arrow-json = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }

adbc-core = { workspace = true }
crossbeam-skiplist = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true, features = ["serde"] }
minijinja = { workspace = true, features = ["loader", "deserialization"] }
minijinja-contrib = { workspace = true, features = ["datetime", "timezone"] }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracy-client = { workspace = true }


[lib]
name = "dbt_fusion_adapter"
path = "src/lib.rs"
doctest = false

[features]
odbc = ["dbt-xdbc/odbc"]
