[package]
name = "dbt-init"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-cloud-api = { workspace = true }
dbt-common = { workspace = true }
dbt-error = { workspace = true }
dbt-frontend-common = { workspace = true }
dbt-telemetry = { workspace = true }
# leaf dependencies (depend on little more than std lib)
dbt-cancel = { workspace = true }
dbt-proc-macros = { workspace = true }

clap = { workspace = true, features = ["derive", "env"] }
dialoguer = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

chrono = { workspace = true }
console = { workspace = true }
dbt-serde_yaml = { workspace = true }
prost = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

tokio = { workspace = true, features = ["fs"] }


log = { workspace = true }
rust-embed = { workspace = true }

[lib]
name = "dbt_init"
path = "src/mod.rs"
doctest = false
