[package]
name = "dbt-loader"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
dbt-common = { workspace = true }
dbt-deps = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-jinja-utils = { workspace = true }
dbt-schemas = { workspace = true }
dbt-serde_yaml = { workspace = true }
dirs = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
minijinja = { workspace = true }
pathdiff = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "dbt_loader"
path = "src/mod.rs"
doctest = false
