[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "dbt-parser"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dbt-common = { workspace = true }
dbt-dag = { workspace = true }
dbt-frontend-common = { workspace = true }
dbt-fusion-adapter = { workspace = true }
dbt-jinja-utils = { workspace = true }
dbt-schemas = { workspace = true }
dbt-selector-parser = { workspace = true }
pathdiff = { workspace = true }

chrono = { workspace = true }
chrono-tz = { workspace = true }
dbt-serde_yaml = { workspace = true }
itertools = { workspace = true }
md5 = { workspace = true }
minijinja = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tempfile = { workspace = true }


[lib]
doctest = true
name = "dbt_parser"
path = "src/lib.rs"
