[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "dbt-sa-cli"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dbt-common = { workspace = true }
dbt-init = { workspace = true }
dbt-jinja-utils = { workspace = true }
dbt-loader = { workspace = true }
dbt-parser = { workspace = true }
dbt-schemas = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

chrono = { workspace = true }
console = { workspace = true }
dbt-serde_yaml = { workspace = true }
git-version = { version = "0.3.9" }
strum = { workspace = true }
uuid = { workspace = true }
vortex-events = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
doctest = false
name = "dbt-sa-cli"
path = "src/main.rs"

[lib]
doctest = false
name = "dbt_sa_lib"
path = "src/lib.rs"
