[package]
name = "dbt-schemas"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
blake3 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dbt-adapter-proc-macros = { workspace = true }
dbt-common = { workspace = true }
dbt-frontend-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-serde_yaml = { workspace = true }
dbt-telemetry = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
md5 = { workspace = true }
merge = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }


[lib]
name = "dbt_schemas"
path = "src/lib.rs"
doctest = false
