[package]
name = "dbt-telemetry"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
arrow = { workspace = true }
dbt-serde_yaml = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_arrow = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
fake = { workspace = true }

[lib]
name = "dbt_telemetry"
path = "src/lib.rs"
doctest = false
